# MainTest

./: CMakeLists.txt  CMakePresets.json
MainTest/: CMakeLists.txt  MainTest.cpp  MainTest.h
MyDll/: CMakeLists.txt  MyDll.cpp  MyDll.h
lib/: MyDll.exp  MyDll.lib
lib/x64-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
lib/x64-debug/.cmake/api/v1/reply/: cache-v2-382e288d925f56522b80.json  cmakeFiles-v1-c7369c7c877ae1c58fc9.json  codemodel-v2-df1b006ec65d22ea3a2e.json  directory-MainTest-Debug-704604f5dc5e89ac16af.json  directory-MyDll-Debug-75c6442636d933f978c8.json  index-2023-01-27T08-02-26-0002.json  target-MainTest-Debug-766da7714f52f2c40b95.json  target-MyDll-Debug-ff716a99a01d5971091e.json
lib/x64-debug/MainTest/: cmake_install.cmake
lib/x64-debug/MyDll/: cmake_install.cmake
